--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zoom-clone",
+  "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Video Chat Application",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
